Fixed hamburger and extra whitespace

--- a/src/styles/blocks/header.pcss
+++ b/src/styles/blocks/header.pcss
@@ -18,4 +18,13 @@
       display: none;
     }
   }
+  &__hamburger {
+    display: none;
+    @include desktop {
+      display: none;
+    }
+    @include tablets {
+      display: block;
+    }
+  }
 }
